--- a/pom.xml
+++ b/pom.xml
@@ -47,9 +47,9 @@
 	<distributionManagement>
         <snapshotRepository>
             <id>deployment</id>
-            <url>http://34.133.107.92:8081/repository/maven-snapshots/</url>
+			<name>snapshot release</name>
+            <url>http://54.183.137.217:8081/repository/maven-snapshots/</url>
         </snapshotRepository>
     </distributionManagement>
 
-		
-</project>
+	</project>
